Change file structure to match the final chapter structure.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -548,10 +548,12 @@ are the light of my life.
 
 %\input{gitinfo.tex}
 \input{introduction.tex}
-%\input{research-question.tex}
-\input{methods.tex}
-\input{results.tex}
-\input{discussion.tex}
+\input{html5.tex}
+\input{other-specs.tex}
+\input{tools.tex}
+\input{use-case.tex}
+\input{implementation.tex}
+\input{conclusions.tex}
 
 % LaTeX test file.
 %\input{test.tex}
