Add acronyms file from the template.

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -170,7 +170,7 @@
 %\usepackage{supertabular}
 % Longtable provides a tabular environment that can span multiple
 % pages. This is used in the example acronyms file.
-%\usepackage{longtable}
+\usepackage{longtable}
 
 % The fancyhdr package allows you to set your the page headers
 % manually, and allows you to add separator lines and so on.
@@ -501,7 +501,7 @@ are the light of my life.
 % start correctly on the right-hand side.
 %\cleardoublepage
 % Example acronyms are placed in a separate file, acronyms.tex
-%\input{acronyms}
+\input{acronyms}
 
 % Table of contents
 % ------------------------------------------------------------------
