Add found acronyms.

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -4,6 +4,47 @@
 \noindent
 \begin{longtable}{@{}p{0.25\textwidth}p{0.7\textwidth}@{}}
 
-
+HTML5 & \\
+API & \\
+WWW & \\
+SDK & \\
+Ajax & \\
+W3C & \\
+XHTML & \\
+XForms & \\
+WHATWG & \\
+URL & \\
+AppCache & \\
+SQL & \\
+DOM & \\
+SVG & \\
+MathML & \\
+XML & \\
+CSS & \\
+CSS3 & \\
+WebGL & \\
+OpenGL® ES & \\
+Blob & \\
+RTMP & \\
+HTTP & \\
+HTTPS & \\
+TCP & \\
+IP & \\
+IT & \\
+CPU & \\
+OS & \\
+CORS & \\
+GPS & \\
+WiFi & \\
+MVC & \\
+REST & \\
+DNS & \\
+TTL & \\
+ETag & \\
+JSON & \\
+3G & \\
+UA & \\
+IE & \\
+CDN & \\
 
 \end{longtable}
