Add acronym definitions and sort lines.

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -4,47 +4,47 @@
 \noindent
 \begin{longtable}{@{}p{0.25\textwidth}p{0.7\textwidth}@{}}
 
-HTML5 & \\
-API & \\
-WWW & \\
-SDK & \\
-Ajax & \\
-W3C & \\
-XHTML & \\
-XForms & \\
-WHATWG & \\
-URL & \\
-AppCache & \\
-SQL & \\
-DOM & \\
-SVG & \\
-MathML & \\
-XML & \\
-CSS & \\
-CSS3 & \\
-WebGL & \\
-OpenGL® ES & \\
-Blob & \\
-RTMP & \\
-HTTP & \\
-HTTPS & \\
-TCP & \\
-IP & \\
-IT & \\
-CPU & \\
-OS & \\
-CORS & \\
-GPS & \\
-WiFi & \\
-MVC & \\
-REST & \\
-DNS & \\
-TTL & \\
-ETag & \\
-JSON & \\
-3G & \\
-UA & \\
-IE & \\
-CDN & \\
+%XForms & \\
+3G & 3rd Generation Mobile Telecommunications\\
+API & Application Programming Interface\\
+Ajax & Asynchronous JavaScript and XML\\
+AppCache & Application Cache\\
+Blob & Binary Large Object\\
+CDN & Content Delivery Network\\
+CORS & Cross-Origin Resource Sharing\\
+CPU & Central Processing Unit\\
+CSS & Cascading Style Sheets\\
+CSS3 & Cascading Style Sheets level 3\\
+DNS & Domain Name System\\
+DOM & Document Object Model\\
+ETag & Entity Tag\\
+GPS & Global Positioning System\\
+HTML5 & HyperText Markup Language version 5\\
+HTTP & Hypertext Transfer Protocol\\
+HTTPS & Hypertext Transfer Protocol Secure\\
+IE & Internet Explorer\\
+IP & Internet Protocol\\
+IT & Information Technology\\
+JSON & JavaScript Object Notation\\
+MVC & Model-View-Controller\\
+MathML & Mathematical Markup Language\\
+OS & Operating System\\
+OpenGL® ES & Open Graphics Library for Embedded Systems\\
+REST & Representational State Transfer\\
+RTMP & Real Time Messaging Protocol\\
+SDK & Software Development Kit\\
+SQL & Structured Query Language\\
+SVG & Scalable Vector Graphics\\
+TCP & Transmission Control Protocol\\
+TTL & Time To Live\\
+UA & User Agent\\
+URL & Uniform Resource Locator\\
+W3C & World Wide Web Consortium\\
+WHATWG & Web Hypertext Application Technology Working Group\\
+WWW &  World Wide Web\\
+WebGL & Web Graphics Library\\
+WiFi & Wireless Local Area Network (WLAN)\\
+XHTML & eXtensible HyperText Markup Language\\
+XML & Extensible Markup Language\\
 
 \end{longtable}
