Remove IE as and abbr.

--- a/thesis/implementation.tex
+++ b/thesis/implementation.tex
@@ -344,8 +344,8 @@ Mobile browsers fire an 'orientationchange' event whenever the device
 orientation changes. The application listened to this event, inferred
 the orientation from the screen dimensions, and executed the wanted
 functionality for the event. I also had to do a fallback for Mobile
-\abbr{IE} browser to listen to the window resize event because the
-browser does not support the orientation change event.
+Internet Explorer browser to listen to the window resize event because
+the browser does not support the orientation change event.
 
 \section{Handling Mobile Networks}
 \label{section:handling-networks}
