Open abbrs when first introduced.

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -19,6 +19,7 @@ DNS & Domain Name System\\
 DOM & Document Object Model\\
 ETag & Entity Tag\\
 GPS & Global Positioning System\\
+HTML & HyperText Markup Language\\
 HTML5 & HyperText Markup Language version 5\\
 HTTP & Hypertext Transfer Protocol\\
 HTTPS & Hypertext Transfer Protocol Secure\\
@@ -36,7 +37,7 @@ SQL & Structured Query Language\\
 SVG & Scalable Vector Graphics\\
 TCP & Transmission Control Protocol\\
 TTL & Time To Live\\
-UA & User Agent\\
+UA & User-Agent\\
 URL & Uniform Resource Locator\\
 W3C & World Wide Web Consortium\\
 WHATWG & Web Hypertext Application Technology Working Group\\
