--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -78,11 +78,12 @@ capabilities. \cite{charland2011mobile}
 
 Table~1.1\tablerefs shows the required developer skill sets for
 different platforms. As we see, each platform has its own programming
-language and \abbr{SDK}. A lot of knowledge and resources are needed
-to provide cross-platform applications for these platforms. Making
-several independent applications with the native tools is also very
-expensive, and adding features or just maintaining all these different
-applications becomes costly. \cite{charland2011mobile}
+language and \abbr{SDK} (Software Development Kit). A lot of knowledge
+and resources are needed to provide cross-platform applications for
+these platforms. Making several independent applications with the
+native tools is also very expensive, and adding features or just
+maintaining all these different applications becomes
+costly. \cite{charland2011mobile}
 
 Some developers are forced to make compromises due to resourcing or
 budgeting, and build their applications only for one platform. This
@@ -113,7 +114,8 @@ system for sharing documents into a massively popular, world wide
 application and information distribution environment
 \cite{taivalsaari2011web}. During the so-called Web 2.0 revolution,
 the Web grew into a platform for interactive applications with the
-help of technologies like \abbr{Ajax} \cite{garrett2005ajax}.
+help of technologies like \abbr{Ajax} (Asynchronous JavaScript and
+XML) \cite{garrett2005ajax}.
 
 The Web is not without its problems, however. The viral spreading of
 mobile phones has raised the need for a feature-rich technology stack
