--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -415,15 +415,16 @@ anymore to build applications for the silos and walled gardens of
 single platforms, and building cross-platform applications is
 essential in the modern mobile market.
 
-In this work, I introduce the \abbr{HTML5} specification as well as
-several related specifications or specification drafts for modern web
-development. I also present several tools and libraries for mobile web
-development.
+In this work, I introduce the \abbr{HTML5} (HyperText Markup Language
+version 5) specification as well as several related specifications or
+specification drafts for modern web development. I also present
+several tools and libraries for mobile web development.
 
 I implemented a mobile web application and a network utility library,
 and assessed the practical performance of the modern tools and
-\abbr{API}s. In this work, I present the tools and techniques for
-performance optimization of mobile web applications.
+\abbr{API}s (Application Programming Interface). In this work, I
+present the tools and techniques for performance optimization of
+mobile web applications.
 
 }
 
@@ -441,10 +442,10 @@ uusia haasteita ohjelmistokehitykselle. Monien eri alustojen
 natiiviteknologiat poikkeavat toisistaan, ja ohjelmistojen
 kehittäminen kaikille näille alustoille on haastavaa.
 
-Ainoa yhteinen tekijä näissä alustoissa on \abbr{WWW}-selain, josta on
-tulossa universaali ohjelmistoalusta. Enää ei voida kehittää
-ohjelmistoja vain tiettyjen suljettujen alustojen käyttäjille, ja
-alusta-riippumattomuudesta on tullut oleellinen osa
+Ainoa yhteinen tekijä näissä alustoissa on \abbr{WWW}-selain (World
+Wide Web), josta on tulossa universaali ohjelmistoalusta. Enää ei
+voida kehittää ohjelmistoja vain tiettyjen suljettujen alustojen
+käyttäjille, ja alusta-riippumattomuudesta on tullut oleellinen osa
 mobiilimarkkinoita.
 
 Tässä työssä esittelemme HTML5-standardin sekä muita siihen liittyviä
