--- a/thesis/use-case.tex
+++ b/thesis/use-case.tex
@@ -70,9 +70,10 @@ To sum up, the main requirements are as follows:
 
 JSONCache was designed as a JavaScript network utility library for
 unreliable mobile networks. It is used in \abbr{Ajax} data requests
-with \abbr{JSON} data. The main idea was to avoid refetching data that
-was already fetched and to handle network interruptions without the
-user noticing anything. The requirements are as follows:
+with \abbr{JSON} (JavaScript Object Notation) data. The main idea was
+to avoid refetching data that was already fetched and to handle
+network interruptions without the user noticing anything. The
+requirements are as follows:
 \begin{enumerate}[resume]
 \item Cache data in the client side (localStorage) to avoid fetching
   data that has already been transferred
