--- a/thesis/html5.tex
+++ b/thesis/html5.tex
@@ -8,7 +8,8 @@ functionality, removing unneeded features, and officially documenting
 some ``de facto'' standards already supported by some or several web
 browsers. \cite{pilgrim2010html5}
 
-In the early 2000s, \abbr{W3C} was developing \abbr{XHTML} and
+In the early 2000s, \abbr{W3C} (World Wide Web Consortium) was
+developing \abbr{XHTML} (eXtensible HyperText Markup Language) and
 \abbr{XForms} standards to be the future of the Web. Many parts of
 these standards were backward incompatible and required very strict
 and error-free authoring. Being frustrated with this vision that was
@@ -16,9 +17,10 @@ seen as impractical for the real world, a group of web browser vendors
 and other interested parties had a competing vision of the future of
 the Web: evolving HTML4 to include additional features maintaining
 backward compatibility. W3C members did not agree with this vision,
-and as a result, the WHAT Working Group was born. \abbr{WHATWG}
-defines itself as a ``loose, unofficial, and open collaboration of Web
-browser manufacturers and interested
+and as a result, the WHAT Working Group was born. \abbr{WHATWG} (Web
+Hypertext Application Technology Working Group) defines itself as a
+``loose, unofficial, and open collaboration of Web browser
+manufacturers and interested
 parties''\footnote{\url{http://www.whatwg.org/news/start}}. \cite{pilgrim2010html5}
 
 According to a
@@ -194,9 +196,9 @@ messages in invalid fields without any JavaScript validation.
 
 HTML was originally designed to be based on documents and hyperlinks
 between these distinct documents with each of them having a unique
-\abbr{URL}. This hyperlinked structure, however, does not suit well
-for web applications with dynamic content and interactively changing
-user interface.
+\abbr{URL} (Uniform Resource Locator). This hyperlinked structure,
+however, does not suit well for web applications with dynamic content
+and interactively changing user interface.
 
 Two of the basic functionalities that users are accustomed to are
 bookmarking and going back and forth in the session
@@ -222,13 +224,13 @@ applications. I present these approaches in the following sections.
 \subsection{Application Cache}
 \label{section:appcache}
 
-\abbr{AppCache} is a relatively simple way to indicate all resources
-needed for offline functionality. A manifest file is defined in the
-HTML document, and within the file there are sections for resources
-that should always or never be cached as well as fallback \abbr{URLs}
-for resources that are not cached but with which the fetching
-fails. In addition to the simple manifest file listing offline
-resources, JavaScript events are defined for cache
+\abbr{AppCache} (Application Cache) is a relatively simple way to
+indicate all resources needed for offline functionality. A manifest
+file is defined in the HTML document, and within the file there are
+sections for resources that should always or never be cached as well
+as fallback \abbr{URLs} for resources that are not cached but with
+which the fetching fails. In addition to the simple manifest file
+listing offline resources, JavaScript events are defined for cache
 changes. \cite{HTML5draft} \\
 
 \clearpage
@@ -270,9 +272,10 @@ easy to use, but are constrained into storing only textual
 data. \cite{webstoragedraft}
 
 Two more expressive storage \abbr{APIs} have been specified: client
-side \abbr{SQL} database \cite{webstoragedraft} and the Indexed
-Database \cite{indexedDBdraft}. The client side SQL database defines
-an asynchronous and transactional JavaScript API for a SQL
+side \abbr{SQL} (Structured Query Language) database
+\cite{webstoragedraft} and the Indexed Database
+\cite{indexedDBdraft}. The client side SQL database defines an
+asynchronous and transactional JavaScript API for a SQL
 database. Although being very expressive, due to the relative
 complexity compared to simple and scalable key/value storage options,
 it is yet to be seen if the client side SQL storage will be accepted
@@ -310,24 +313,26 @@ moved within the user interface from one place to another. Older
 browsers have had proprietary solutions for this interaction pattern,
 but HTML5 standardizes the API.
 
-The specification defines the element attributes and \abbr{DOM} events
-for easily enabling and controlling draggable elements and drop
-targets. Custom cross-browser JavaScript solutions have enabled this
-interaction before, but little JavaScript code is needed with the new
-API. The browser handles the interaction and the dynamic rendering,
-reducing the interface lagging and the need for extra processing.
+The specification defines the element attributes and \abbr{DOM}
+(Document Object Model) events for easily enabling and controlling
+draggable elements and drop targets. Custom cross-browser JavaScript
+solutions have enabled this interaction before, but little JavaScript
+code is needed with the new API. The browser handles the interaction
+and the dynamic rendering, reducing the interface lagging and the need
+for extra processing.
 
 \section{SVG and MathML}
 
 While not part of the HTML5 standard, the specification allows for
-embedding \abbr{SVG} \cite{SVGTiny12} and \abbr{MathML} \cite{MathML}
-markup within HTML.
+embedding \abbr{SVG} (Scalable Vector Graphics) \cite{SVGTiny12} and
+\abbr{MathML} (Mathematical Markup Language) \cite{MathML} markup
+within HTML.
 
 SVG is a markup language for describing two-dimensional vector
-graphics in \abbr{XML}. The markup can be accessed with the \abbr{DOM}
-API for creating dynamic and interactive functionality. Within an
-HTML5 document, SVG markup can be embedded within the \texttt{svg}
-element.
+graphics in \abbr{XML} (Extensible Markup Language). The markup can be
+accessed with the \abbr{DOM} API for creating dynamic and interactive
+functionality. Within an HTML5 document, SVG markup can be embedded
+within the \texttt{svg} element.
 
 MathML is an \abbr{XML} markup language for describing the structure
 and content of mathematical notation. It can be embedded within an
