Add missing meta information.

--- a/thesis/aalto-thesis.sty
+++ b/thesis/aalto-thesis.sty
@@ -166,10 +166,10 @@
   \renewcommand{\ATINSTRUCTOR}{\INSTRUCTOR}
   \renewcommand{\ATDATENAME}{Date}
   \renewcommand{\ATDATE}{\DATE}
-  \renewcommand{\ATCITY}{Espoo}
+  \renewcommand{\ATCITY}{Kirkkonummi}
   \renewcommand{\ATUNIV}{Aalto University}
   \renewcommand{\ATSCHOOL}{School of Science}
-  \renewcommand{\ATDEGREEPROG}{\fixme{Set degree program}}
+  \renewcommand{\ATDEGREEPROG}{Degree Programme in Automation and Systems Technology}
   \renewcommand{\ATABSTRACTNAME}{ABSTRACT OF MASTER'S THESIS}
   \renewcommand{\ATLOGO}{images/aalto-logo-en}
   \renewcommand{\ATAUTHORNAME}{Author}
