--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -261,12 +261,15 @@
 % You can just fix the texts there. Just remember to check all the language
 % variants you use (they are all there in the same place).
 % ------------------------------------------------------------------
-\newcommand{\TITLE}{Mobile HTML5}
-\newcommand{\FTITLE}{\fixme{Add Finnish title}}
-\newcommand{\SUBTITLE}{Implementing a Responsive Cross-Platform Application}
-\newcommand{\FSUBTITLE}{\fixme{Add Finnish subtitle}}
-\newcommand{\DATE}{\fixme{Add English date}}
-\newcommand{\FDATE}{\fixme{Add Finnish date}}
+
+\newcommand{\TITLE}{Mobile HTML5:}
+\newcommand{\FTITLE}{Mobiili HTML5:}
+
+\newcommand{\SUBTITLE}{Implementing a Responsive Cross-Platform \mbox{Application}}
+\newcommand{\FSUBTITLE}{Suorituskykyisen ja alustariippumattoman ohjelmiston toteutus}
+
+\newcommand{\DATE}{April 29, 2012}
+\newcommand{\FDATE}{29 huhtikuuta 2012}
 
 % Supervisors and instructors
 % ------------------------------------------------------------------
