--- a/thesis/tools.tex
+++ b/thesis/tools.tex
@@ -1,4 +1,4 @@
-\chapter{Tools for Modern Mobile Web Applications}
+\chapter{Tools and Techniques}
 \label{chapter:tools-and-techniques}
 
 With all the hype and trending surrounding HTML5 and mobile web
