Add missing metainfo and formatting.

--- a/thesis/implementation.tex
+++ b/thesis/implementation.tex
@@ -102,6 +102,7 @@ in the configuration). On subsequent attempts the timeout is
 increased, and after a defined number of attempts the fetch error is
 issued.
 
+\clearpage
 Figure~\ref{figure:jsoncache-demo.png} shows an interactive demo of
 the JSONCache library. The
 demo\footnote{\url{http://kpuputti.github.com/JSONCache/demo/index.html}}
@@ -687,6 +688,7 @@ Figure~\ref{figure:devdays-pagespeed.png}.
   \end{center}
 \end{figure}
 
+\clearpage
 I was very happy with the Page Speed score of 92 out of 100. A lot of
 the performance rules analyzed by Page Speed are similar to the
 guidelines listed in Section~\ref{section:performance-guidelines}, but
@@ -789,6 +791,7 @@ for improvement, and many of the solutions can be very simple, such as
 configuring the web server without even touching the application
 itself.
 
+\clearpage
 To answer the research questions posed in
 Section~\ref{section:research-questions}, I sum up as follows:
 
