--- a/thesis/other-specs.tex
+++ b/thesis/other-specs.tex
@@ -228,7 +228,7 @@ possible security issues into account. \cite{WebSocketProtocol}
 \section{Server-Sent Events}
 
 Server-Sent Events specification \cite{ServerSentEvents} defines a
-data stream format \texttt{text/event-stream} that can be used to
+data stream format\\ \texttt{text/event-stream} that can be used to
 connect an event listener in the client side to listen for events
 initiated by the server. These streams can be used, for example, for
 real-time push notifications for data content updates.
