--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -217,7 +217,7 @@
 %   twosupervisors  - changes the title of supervisors to plural form
 %\usepackage[mydraft,twosupervisors]{aalto-thesis}
 %\usepackage[mydraft]{aalto-thesis}
-\usepackage[mydraft,doublenumbering]{aalto-thesis}
+\usepackage[doublenumbering]{aalto-thesis}
 %\usepackage{aalto-thesis}
 
 % Own includes
@@ -266,7 +266,7 @@
 \newcommand{\FTITLE}{Mobiili HTML5:}
 
 \newcommand{\SUBTITLE}{Implementing a Responsive Cross-Platform \mbox{Application}}
-\newcommand{\FSUBTITLE}{Suorituskykyisen ja alustariippumattoman ohjelmiston toteutus}
+\newcommand{\FSUBTITLE}{Suorituskykyisen ja alustariippumattoman sovelluksen toteutus}
 
 \newcommand{\DATE}{April 29, 2012}
 \newcommand{\FDATE}{29 huhtikuuta 2012}
@@ -488,9 +488,9 @@ Futurice, for giving me time to write this work and to do satisfying
 projects, such as the practical part of this work, every day with
 different customers.
 
-Mostly, I would like to thank my wife for the valuable support and my
-firstborn son, Leo, who was born during the writing of this work. You
-are the light of my life.
+Mostly, I would like to thank my wife Maija for the valuable support
+and my firstborn son Leo who was born during the writing of this
+work. You are the light of my life.
 
 \vskip 10mm
 
