Fix thesis school and metainfo.

--- a/thesis/aalto-thesis.sty
+++ b/thesis/aalto-thesis.sty
@@ -168,10 +168,10 @@
   \renewcommand{\ATDATE}{\DATE}
   \renewcommand{\ATCITY}{Kirkkonummi}
   \renewcommand{\ATUNIV}{Aalto University}
-  \renewcommand{\ATSCHOOL}{School of Electrical Engineering}
-  \renewcommand{\ATDEGREEPROG}{Degree Programme in Automation and Systems Technology}
+  \renewcommand{\ATSCHOOL}{School of Science}
+  \renewcommand{\ATDEGREEPROG}{Degree Programme of Computer Science and Engineering}
   \renewcommand{\ATABSTRACTNAME}{ABSTRACT OF MASTER'S THESIS}
-  \renewcommand{\ATLOGO}{images/aalto-electrical-en.png}
+  \renewcommand{\ATLOGO}{images/aalto-logo-en}
   \renewcommand{\ATAUTHORNAME}{Author}
   \renewcommand{\ATKEYWORDSNAME}{Keywords}
   \renewcommand{\ATKEYWORDS}{\KEYWORDS}
@@ -205,7 +205,7 @@
   \renewcommand{\ATSCHOOL}{Perustieteiden korkeakoulu}
   \renewcommand{\ATDEGREEPROG}{Tietotekniikan tutkinto-ohjelma}
   \renewcommand{\ATABSTRACTNAME}{DIPLOMITYÖN TIIVISTELMÄ}
-  \renewcommand{\ATLOGO}{images/aalto-electrical-fi.png}
+  \renewcommand{\ATLOGO}{images/aalto-logo-fi}
   \renewcommand{\ATAUTHORNAME}{Tekijä}
   \renewcommand{\ATKEYWORDSNAME}{Asiasanat}
   \renewcommand{\ATKEYWORDS}{\FKEYWORDS}
@@ -312,7 +312,7 @@
 % First block sets the logo. Must be placed manually, because
 % the logo itself has huge blank areas around it.
 \begin{textblock}{10}(9.07,1)
-\raggedleft\noindent\includegraphics[height=1.5cm]{\ATLOGO}
+\raggedleft\noindent\includegraphics[height=2.7cm]{\ATLOGO}
 \end{textblock}
 % Before the main abstract table there is the school name
 % and abstract title (ABSTRACT OF THE MASTER'S THESIS etc.)
