--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -268,8 +268,8 @@
 \newcommand{\SUBTITLE}{Implementing a Responsive Cross-Platform \mbox{Application}}
 \newcommand{\FSUBTITLE}{Suorituskykyisen ja alustariippumattoman sovelluksen toteutus}
 
-\newcommand{\DATE}{April 29, 2012}
-\newcommand{\FDATE}{29 huhtikuuta 2012}
+\newcommand{\DATE}{May 15, 2012}
+\newcommand{\FDATE}{15 toukokuuta 2012}
 
 % Supervisors and instructors
 % ------------------------------------------------------------------
